# Algorithm-problem

./: pyproject.toml
Baek/01_BFS/: 1260.py  1697.py  2606.py  dsd.py
Baek/02_DFS/: 10121.py  11724.py
Baek/03_Backtracking/: 15649.py  9663.py
Baek/04_Simulation/: 10811.py  10813.py
Baek/05_Twopointer/: 1806.py  2003.py  2470.py  2559.py  3273.py
Baek/06_Binary Search/: 10816.py  1920.py
Baek/07_Greedy/: 11047.py  1541.py  2839.py
Baek/08_DP/: 11726.py  9095.py
Baek/09_MST/: 1647.py  1922.py
Baek/11_Floyd/: 11404.py
Baek/12_Etc/: 10844.py  1343.py  20365.py  2417.py
Baek/BFS/: 2178.py
Baek/Backtracking/: 15650.py
Baek/DFS/: 1012.py  2667.py
Baek/DP/: 1003.py  1463.py  2579.py
Baek/Greedy/: 11399.py  1931.py
Baek/MST/: 1197.py
Baek/diek/: 1753.py  1916.py
Baek/ploid/: 11403.py
Baek/simulation/: 10810.py  14503.py
Baek/기타/: 1158.py  14889.py  14916.py  17626.py  22864.py  2805.py  7576.py
Programmers/0_Level/기초/0~20/: n의 배수.py  공배수.py  문자 리스트를 문자열로 변환하기.py  문자열 곱하기.py  문자열 붙여서 출력하기.py  수 조작하기 1.py  원소들의 곱과 합.py  이어 붙인 수.py  접미사인지 확인하기.ipynb  접미사인지 확인하기.py  첫 번째로 나오는 음수.py  홀짝 구분하기.py  홀짝에 따라 다른 값 반환하기.py
Programmers/0_Level/기초/21~40/: 0 떼기.py  꼬리 문자열.py  더 크게 합치기.py  덧셈식 출력하기.py  두 수의 연산값 비교하기.py  문자열 바꿔서 찾기.py  배열의 원소 삭제하기.py  부분 문자열.py  접두사인지 확인하기.py  정수 찾기.py  조건에 맞게 수열 변환하기 3.py  주사위 게임 2.py  콜라츠 수열 만들기.py
Programmers/0_Level/입문/0~20/: 각도기.py  나이 출력.py  두 수의 나눗셈.py  머쓱이보다 키 큰사람.py  배열의 평균값.py  양꼬치.py  짝수의 합.py  최댓값 만들기(1).py
Programmers/0_Level/입문/21~40/: 대문자와 소문자.py  모음 제거.py  문자 반복 출력하기.py  배열 두 배 만들기.py  배열의 유사도.py  (+10 more)
(+37 files in other folders)
