[project]
name = "baek"
version = "0.1.0"
description = ""
authors = [
    {name = "gihunKIM",email = "kkh1902@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.5.2,<8.0.0)",
    "jupytext (>=1.18.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
